@@ -1,10 +1,12 @@
 package az.fitnest.user.config;
 
 import az.fitnest.user.security.FitnestSecurityFilter;
+import jakarta.servlet.http.HttpServletResponse;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
@@ -16,45 +18,20 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.List;
 
 /**
- * Security configuration for user-service.
- * 
- * - Internal endpoints (/api/v1/internal/**): Permit if X-Internal-Service header present
- * - External endpoints: Require authentication via gateway headers (X-User-Id)
- * - Public endpoints: Swagger, actuator, files
+ * Simplified, monolithic security configuration for user-service.
  */
-@Slf4j
 @Configuration
 @EnableWebSecurity
+@EnableMethodSecurity
+@Slf4j
 public class SecurityConfig {
 
     @Bean
-    @org.springframework.core.annotation.Order(1)
-    public SecurityFilterChain internalSecurityFilterChain(HttpSecurity http) throws Exception {
-        log.warn(">>> [NUCLEAR] LOADING INTERNAL SECURITY CHAIN - PRIORITY 1 <<<");
-        
-        http
-            .securityMatcher(new AntPathRequestMatcher("/api/v1/internal/**"))
-            .csrf(AbstractHttpConfigurer::disable)
-            .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-            .authorizeHttpRequests(auth -> auth
-                .anyRequest().hasRole("INTERNAL")
-            )
-            .addFilterBefore(
-                new az.fitnest.user.security.FitnestSecurityFilter(),
-                UsernamePasswordAuthenticationFilter.class
-            );
-        
-        return http.build();
-    }
-
-    @Bean
-    @org.springframework.core.annotation.Order(2)
-    public SecurityFilterChain externalSecurityFilterChain(HttpSecurity http) throws Exception {
-        log.info(">>> LOADING EXTERNAL SECURITY CHAIN - PRIORITY 2 <<<");
+    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+        log.info(">>> LOADING UNIFIED SECURITY CHAIN <<<");
         
         http
             .csrf(AbstractHttpConfigurer::disable)
@@ -63,10 +40,13 @@ public class SecurityConfig {
                 session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
             )
             .authorizeHttpRequests(auth -> auth
-                // PUBLIC ENDPOINTS
-                .requestMatchers(new AntPathRequestMatcher("/swagger-ui.html")).permitAll()
+                // 1. Internal APIs - Require ROLE_INTERNAL
+                .requestMatchers(new AntPathRequestMatcher("/api/v1/internal/**")).hasRole("INTERNAL")
+                
+                // 2. Public Endpoints
                 .requestMatchers(new AntPathRequestMatcher("/swagger-ui/**")).permitAll()
                 .requestMatchers(new AntPathRequestMatcher("/v3/api-docs/**")).permitAll()
+                .requestMatchers(new AntPathRequestMatcher("/swagger-ui.html")).permitAll()
                 .requestMatchers(new AntPathRequestMatcher("/actuator/**")).permitAll()
                 .requestMatchers(new AntPathRequestMatcher("/health/**")).permitAll()
                 .requestMatchers(new AntPathRequestMatcher("/api/v1/files/profiles/**")).permitAll()
@@ -74,29 +54,35 @@ public class SecurityConfig {
                 .requestMatchers(new AntPathRequestMatcher("/error")).permitAll()
                 .requestMatchers(new AntPathRequestMatcher("/**", HttpMethod.OPTIONS.name())).permitAll()
                 
+                // 3. All other requests - Authenticated (ROLE_USER)
                 .anyRequest().authenticated()
             )
-            .addFilterBefore(
-                new az.fitnest.user.security.FitnestSecurityFilter(),
-                UsernamePasswordAuthenticationFilter.class
-            );
-        
+            .exceptionHandling(ex -> ex
+                .authenticationEntryPoint((request, response, authException) -> {
+                    log.debug("Unified Security: Unauthorized to {} from {}", request.getRequestURI(), request.getRemoteAddr());
+                    response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+                    response.setContentType("application/json");
+                    response.getWriter().write("{\"error\":\"Unauthorized\"}");
+                })
+                .accessDeniedHandler((request, response, accessDeniedException) -> {
+                    log.warn("Unified Security: Access Denied to {} from {}", request.getRequestURI(), request.getRemoteAddr());
+                    response.setStatus(HttpServletResponse.SC_FORBIDDEN);
+                    response.setContentType("application/json");
+                    response.getWriter().write("{\"error\":\"Forbidden\"}");
+                })
+            )
+            .addFilterBefore(new FitnestSecurityFilter(), UsernamePasswordAuthenticationFilter.class);
+
         return http.build();
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(List.of("*"));
-        configuration.setAllowedMethods(Arrays.asList(
-            "GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS", "HEAD"
-        ));
+        configuration.setAllowedOrigins(List.of("*"));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
         configuration.setAllowedHeaders(List.of("*"));
-        configuration.setExposedHeaders(List.of(
-            "Authorization", "X-User-Id", "X-User-Email", "X-User-Roles", "X-Request-ID"
-        ));
-        configuration.setAllowCredentials(true);
-        configuration.setMaxAge(3600L);
+        configuration.setExposedHeaders(List.of("*"));
         
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
